--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,18 @@
   --clr-secondary: hotpink;
   --clr-secondary-light: lightpink;
   --clr-white: white;
+
+  --font-family-sans-serif: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;;
+  --font-family-serif: monospace;
+
+  --font-size-xxl:3rem;
+  --font-size-xl:2rem;
+  --font-size-lg:1.5rem;
+  --font-size-med:1rem;
+  --font-size-sm:0.9rem;
+  --font-size-xs:0.8rem;
+  --font-size:xxs:0.7rem;
 }
 
 /* Box sizing */
@@ -62,8 +74,7 @@ body {
   background: white;
   line-height: 1.5;
   color: #000000;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: var(--font-family-sans-serif);
   min-height: 100dvh;
 }
 
