--- a/styles.css
+++ b/styles.css
@@ -1,118 +1,4 @@
-/* custom properties */
-
-:root {
-  --gap: 1rem;
-
-  --clr-black: black;
-  --clr-primary-dark: darkgrey;
-  --clr-primary: grey;
-  --clr-primary-light: lightgrey;
-  --clr-secondary-dark: deeppink;
-  --clr-secondary: hotpink;
-  --clr-secondary-light: lightpink;
-  --clr-white: white;
-
-  --font-family-sans-serif: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-  Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;;
-  --font-family-serif: monospace;
-
-  --font-size-xxl:3rem;
-  --font-size-xl:2rem;
-  --font-size-lg:1.5rem;
-  --font-size-med:1rem;
-  --font-size-sm:0.9rem;
-  --font-size-xs:0.8rem;
-  --font-size:xxs:0.7rem;
-}
-
-/* Box sizing */
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-}
-
-/* Reset Margins */
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-figure,
-picture {
-  margin: 0;
-}
-
-/* Responsive Elements */
-img,
-picture,
-video,
-canvas,
-svg {
-  display: block;
-  max-width: 100%;
-}
-
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  overflow-wrap: break-word;
-}
-
-html {
-  font-size: 100%;
-} /* 16px */
-
-body {
-  background: white;
-  line-height: 1.5;
-  color: #000000;
-  font-family: var(--font-family-sans-serif);
-  min-height: 100dvh;
-}
-
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-
-/* Remove Animations */
-@media (prefers-reduced-motion: reduce) {
-  *,
-  *:before,
-  *:after {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-  }
-}
-
-/* Utility Classes */
-.flex {
-  display: flex;
-  gap: var(--gap, rem);
-}
-
-.grid {
-  display: grid;
-  gap: var(--gap, 1rem);
-}
-
-.container {
-  padding-inline: 2rem;
-  margin-inline: auto;
-  max-width: 80rem;
-}
+/* Styles specifically for the Demo Site */
 
 .clr-swatch {
   padding: 2rem;
