--- a/clutterize.css
+++ b/clutterize.css
@@ -16,7 +16,8 @@
   Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;;
   --font-family-serif: monospace;
 
-  --font-size-xxl:3rem;
+  --font-size-xxxl:3rem;
+  --font-size-xxl:2.5rem;
   --font-size-xl:2rem;
   --font-size-lg:1.5rem;
   --font-size-med:1rem;
@@ -76,6 +77,30 @@ body {
   color: var(--clr-black, black);
   font-family: var(--font-family-sans-serif);
   min-height: 100dvh;
+}
+
+h1 {
+  font-size: var(--font-size-xxxl);
+}
+
+h2 {
+  font-size: var(--font-size-xxl);
+}
+
+h3 {
+  font-size: var(--font-size-xl);
+}
+
+h4 {
+  font-size: var(--font-size-lg);
+}
+
+h5 {
+  font-size: var(--font-size-med);
+}
+
+h6 {
+  font-size: var(--font-size-sm);
 }
 
 input,
